<resources>
    <string name="app_name">FacePaper</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_success">login success</string>
    <string name="login">Connexion</string>
    <string name="email">Email</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>

    <string name="Password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="repeat_password">retaper password</string>
    <string name="go">Connexion</string>
    <string name="register">Inscription</string>
    <string name="keepConnected">Rester connecté</string>
    <string name="menuNews">News</string>
    <string name="menuTopics">Topics</string>
    <string name="menuProfil">Profil</string>
    <string name="logout">Déconnexion</string>
    <string name="btnAjouterNews">Créer une News</string>
    <string name="btnAjouterTopic">Créer un Topic</string>
    <string name="btnAjouterPost">Créer un post</string>
    <string name="btnAjouterComment">Créer un commentaire</string>

    <string name="titreDialogNews">Ecrivez votre propre news</string>
    <string name="titreDialogTopics">Ecrivez votre propre topics</string>
    <string name="titreNews">Titre</string>
    <string name="contentNews">Contenu</string>
    <string name="btnDelete">Supprimer</string>
    <string name="btnUpdate">Modifier</string>
    <string name="writeBy">Ecris par : </string>

    <string name="titreAttente">En cours</string>
    <string name="textAttenteLogin">Vérification de l\'email et du password</string>
    <string name="textAttenteNews">Récupération des news en cours</string>
    <string name="textAttenteTopics">Récupération des topics en cours</string>
    <string name="textAttentePosts">Récupération des posts en cours</string>
    <string name="textAttenteComments">Récupération des commentaires en cours</string>

    <string name="textUpdateUser">Mise à jour des informations en cours</string>
    <string name="textMsgErrorUpdate">Erreur lors de la modification</string>

    <string name="textUpdateNews">Mise à jour de la news en cours</string>
    <string name="textCreationNews">Création de la news en cours</string>
    <string name="textSupressionNews">Supression du news</string>

    <string name="textUpdateComments">Mise à jour du commentaire en cours</string>
    <string name="textCreationComments">Création du commentaire en cours</string>
    <string name="textSupressionComment">Supression du commentaire</string>

    <string name="textUpdateTopics">Mise à jour du Topic en cours</string>
    <string name="textCreationTopics">Création du Topic en cours</string>
    <string name="textSupressionTopic">Supression du Topic</string>

    <string name="textUpdatePosts">Mise à jour du post en cours</string>
    <string name="textCreationPosts">Création du post en cours</string>
    <string name="textSupressionPosts">Supression du post</string>

    <string name="textAttenteInscription">Inscription en cours</string>
    <string name="textInscriptionReussi">Inscription reussi, veuillez vous connectez</string>
    <string name="textInscriptionError">Inscription raté, user déjà inscrit</string>


    <string name="msgErrorLogin">email et/ou password faux</string>
    <string name="msgErrorNews">erreur lors de la récupération des news</string>
    <string name="msgErrorNewsCreate">erreur lors de la création d\'une  news</string>
    <string name="msgErrorNewsAlreadyExist">News déja existante</string>

    <string name="msgErrorNetwork">Erreur réseau</string>
    <string name="msgErrorNetworkNews">Erreur réseau, récupération des news local</string>
    <string name="msgErrorNetworkTopics">Erreur réseau, récupération des topics local</string>


    <string name="msgSuccesUpdNews">Modification réussi</string>

    <string name="msgSuccesDel">Suppression réussi</string>

    <string name="msgErrorDelNews">Ceci n\'est pas vôtre news</string>
    <string name="msgErrorDelPosts">Ceci n\'est pas vôtre posts</string>

    <string name="msgErrorDelTopic">Ceci n\'est pas vôtre topic</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
