<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="14dp"
    android:paddingRight="14dp">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/titreDialogNews"
    android:layout_gravity="center_horizontal"
    android:textSize="23dp"/>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="#c5c5c5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">
        <EditText
            android:textSize="15dp"
            android:hint="@string/titreNews"
            android:textColor="#2fa881"
            android:id="@+id/editTitleNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:background="@drawable/selector_bg_edit"
            android:textCursorDrawable="@drawable/bg_input_cursor"
            android:paddingBottom="2dp"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:textColorHint="#c5c5c5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textSize="15dp"
            android:hint="@string/contentNews"
            android:textColor="#2fa881"
            android:inputType="textMultiLine"
            android:id="@+id/editContentNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit"
            android:textCursorDrawable="@drawable/bg_input_cursor"
            android:paddingBottom="2dp"
            />
    </android.support.design.widget.TextInputLayout>





</LinearLayout>