<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.FirstActivity">

    <FrameLayout
        android:layout_centerInParent="true"
        android:paddingTop="70dp"
        android:layout_width="320dp"
        android:layout_height="450dp">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_add"
            app:cardBackgroundColor="#2ea67f"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
           >
           <LinearLayout
               android:orientation="vertical"
               android:layout_marginTop="30dp"
               android:paddingStart="50dp"
               android:paddingEnd="30dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <android.support.design.widget.TextInputLayout
                   android:id="@+id/edit_nom_layout"
                   android:textColorHint="#f0f7f4"
                   android:theme="@style/TextLabel"
                   android:layout_marginBottom="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <EditText
                       android:id="@+id/edit_email"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textEmailAddress"
                       android:textColor="#f0f7f4"
                       android:background="@drawable/selector_bg_edit_2"
                       android:textCursorDrawable="@drawable/bg_input_cursor_2"
                       android:paddingBottom="2dp"
                       android:hint="@string/email" />
               </android.support.design.widget.TextInputLayout>


               <android.support.design.widget.TextInputLayout
                   android:id="@+id/edit_prenom_layout"
                   android:layout_width="match_parent"
                   android:textColorHint="#f0f7f4"
                   android:layout_marginBottom="10dp"

                   android:theme="@style/TextLabel"
                   android:layout_height="wrap_content">
                   <EditText
                       android:id="@+id/edit_password"
                       android:inputType="textPassword"
                       android:textColor="#f0f7f4"
                       android:background="@drawable/selector_bg_edit_2"
                       android:textCursorDrawable="@drawable/bg_input_cursor_2"
                       android:paddingBottom="2dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/Password" />
               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/edit_age_layout"
                   android:layout_width="match_parent"
                   android:textColorHint="#f0f7f4"
                   android:layout_marginBottom="10dp"

                   android:theme="@style/TextLabel"
                   android:layout_height="wrap_content">
                   <EditText
                       android:id="@+id/edit_firstname"
                       android:inputType="text"
                       android:textColor="#f0f7f4"
                       android:background="@drawable/selector_bg_edit_2"
                       android:textCursorDrawable="@drawable/bg_input_cursor_2"
                       android:paddingBottom="2dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/firstname" />
               </android.support.design.widget.TextInputLayout>

               <android.support.design.widget.TextInputLayout
                   android:id="@+id/edit_ulr1_layout"
                   android:layout_width="match_parent"
                   android:textColorHint="#f0f7f4"
                   android:layout_marginBottom="10dp"

                   android:theme="@style/TextLabel"
                   android:layout_height="wrap_content">
                   <EditText
                       android:id="@+id/edit_lastname"
                       android:inputType="text"
                       android:textColor="#f0f7f4"
                       android:background="@drawable/selector_bg_edit_2"
                       android:textCursorDrawable="@drawable/bg_input_cursor_2"
                       android:paddingBottom="2dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/lastname" />
               </android.support.design.widget.TextInputLayout>

               <Button
                   android:layout_gravity="center_horizontal"
                   android:id="@+id/bt_go"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/bt_shape_2"
                   android:stateListAnimator="@drawable/state_list_animator_z"
                   android:layout_width="150dp"
                   android:layout_height="50dp"
                   android:text="@string/register"
                   android:textColor="#2fa881"
                   >
               </Button>

           </LinearLayout>
            </android.support.v7.widget.CardView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:src="@drawable/plus_x"
            android:transitionName="loginFab"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>


</RelativeLayout>
