<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:frisson="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"

        />


    <FrameLayout
        android:id="@+id/center2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/center"
        android:layout_marginBottom="150dp"></FrameLayout>

    <FrameLayout
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"></FrameLayout>


    <com.github.florent37.diagonallayout.DiagonalLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/center2"
        android:layout_gravity="bottom"
        diagonal:diagonal_angle="11"
        diagonal:diagonal_direction="right"
        diagonal:diagonal_position="top">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/cardview_light_background" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textViewEmailLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_marginTop="120dp"
                android:textSize="22dp">

                <EditText

                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/email"
                    android:inputType="textPersonName"
                    android:paddingBottom="2dp"
                    android:textColor="#2fa881"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textViewFirstNameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textViewEmailLayout"
                android:layout_below="@+id/textViewEmailLayout"
                android:layout_marginTop="30dp"
                android:textSize="22dp">

                <EditText

                    android:id="@+id/textViewFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/prenom"
                    android:inputType="textPersonName"
                    android:paddingBottom="2dp"
                    android:textColor="#2fa881"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textViewLastNameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewFirstNameLayout"
                android:layout_alignStart="@+id/textViewFirstNameLayout"
                android:layout_marginTop="30dp"


                android:textSize="22dp">

                <EditText

                    android:id="@+id/textViewLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_bg_edit"
                    android:hint="@string/nom"
                    android:inputType="textPersonName"
                    android:paddingBottom="2dp"
                    android:textColor="#2fa881"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:textSize="22dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:text="@string/btnUpdate"
                android:id="@+id/btn_update_profil"
                android:layout_below="@+id/textViewLastNameLayout"
                android:layout_alignParentRight="true"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                />

        </RelativeLayout>
    </com.github.florent37.diagonallayout.DiagonalLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/center2"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="22dp"
        android:background="@drawable/circle"
        android:elevation="15dp"
        android:src="@drawable/androidimg"
        frisson:cardCornerRadius="50dp" />
    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="14dp"
        android:background="@drawable/circle_transparent"
        android:src="@drawable/logout"

        />


</RelativeLayout>